# MOOCLMS

./: .env.example  .gitignore  README.md  mooc.db  ngrok.py  pyproject.toml  run_client.py  run_db.py  run_server.py  tz.txt
client/: __init__.py
client/db/: __init__.py
client/routers/: __init__.py  auth.py  course.py  lesson.py  module.py  pages.py
client/schemas/: __init__.py  auth.py  course.py  lesson.py  module.py
client/templates/: __404.html  __base.html  __helpers.html  course.html  courses.html  create_free_course.html  create_lesson.html  create_module.html  create_premium_course.html  creating_courses.html  edit_course.html  login.html  logout.html  order_course.html  profile.html  register.html
client/utils/: __init__.py  auth_client.py
server/: __init__.py
server/db/: __init__.py
server/db/models/: __init__.py  course.py  lesson.py  module.py  user.py
server/routers/: __init__.py  auth.py  course.py  lesson.py  module.py  payment.py  user.py
server/schemas/: __init__.py  course.py  lesson.py  module.py  user.py
server/tests/: __init__.py  conftest.py  test_integrations.py
server/utils/: __init__.py  custom_exeptions.py  jwt_settings.py
