[project]
name = "mooclms"
version = "0.1.0"
description = ""
authors = [
    {name = "AlexgDevs",email = "asmetanin014@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "flask[asyncio] (>=3.1.2,<4.0.0)",
    "flask-form (>=1.0.0,<2.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
